order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  orderapi
  labels:
    app:  orderapi
spec:
  selector:
    matchLabels:
      app: orderapi
  replicas: 1
  template:
    metadata:
      labels:
        app:  orderapi
    spec:
      containers:
      - name:  orderapi
        image:  asia.gcr.io/digisense-293411/orderapi
        ports:
        - containerPort:  80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: orderapi-svc
spec:
  selector:
    app: orderapi
  type: NodePort
  ports:
  - port: 8001 
    targetPort: 80
    protocol: TCP
