ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: banking-microservices
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "static-ip"
spec:
  rules:
  - http:
      paths:
        - path: /customer/*
          backend:
            serviceName: customerapi-svc
            servicePort: 8001
        - path: /order/*
          backend:
            serviceName: orderapi-svc
            servicePort: 8001
